    * CHANGE: FileManager: separate file/dir icons from filenames in table to make better vertical allignment
    * CHANGE: FileManager: coloured (brown) non-local mount points (ie. mounted USB storage partitions, NFS/CIFS network shares)
    * CHANGE: move haserl from /bin to /usr/bin for better CGI portability (compatibility with LGMOD S7)

0.5.0-beta3 [2011.12.24]:

    * FIX: boot if any of netcast_config_add_* options was disabled and NetCast config.xml is too big to parse
    * FIX: udhcpc script now sets default IP address before making requests instead of 0.0.0.0 when configuration set to DHCP but no DHCP servers around
    * FIX: FileManager link in WebUI
    * FIX: back from playback in FileManager had mixed paths
    * ADD: TFTP server service for early boot recovery (3 stages) - uploads need to be authenticated by TV serial number
    * ADD: text files and images viewer in FileManager that's usable with remote control
    * ADD: /mnt/usb{1,2}/Drive{5,6} mount points
    * ADD: support for EXT3, JFS, [ EXT4 via additional kernel modules ], other supported filesystems by kernel automounting on hotplug
    * ADD: support for OpenLGTV_BCM dir, Yahoo Widgets, etc. on JFS, EXT3/[4],... formated partitions
    * ADD: support for storage devices connected to USB HUBs (but playback possibility from them is via FileManager only)
    * ADD: add directory, M3U and PLS playlists automated playback for local files in FileManager
    * ADD: customizable refresh/load time for next files from the list/dir in FileManager using numbered buttons on remote control
    * ADD: OPENRELEASE bound key actions in Remote Control web interface
    * UPDATE: improve Yavido alternative with bigger font, arrows navigation and shorter refresh time

0.5.0-beta2:

    * FIX: DLNA servers/shares visibility
    * FIX: OpenLGTV BCM, WWW, Yahoo Widgets icons removal when disabled in WebUI
    * ADD: VOB, MPEG, DAT, ASF, MTS file extensions for FileManager playback